--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-ureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
+ureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=rue
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress = true
+eureka.client.instance.preferIpAddress=true
